code/typescript/SPAREngine/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# SPAR Engine client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-sparengine)](https://www.npmjs.com/package/@factset/sdk-sparengine)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch SPAR Engine Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.6
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-sparengine@0.8.6
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-sparengine@0.8.6
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-sparengine');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = "'Client:Foo/Bar'"; // String | The directory to get the accounts and sub-directories in

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*sparengine.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*sparengine.CalculationsApi* | [**cancelCalculationById**](docs/CalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*sparengine.CalculationsApi* | [**getCalculationStatusById**](docs/CalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*sparengine.CalculationsApi* | [**getCalculationStatusSummaries**](docs/CalculationsApi.md#getCalculationStatusSummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*sparengine.CalculationsApi* | [**runCalculation**](docs/CalculationsApi.md#runCalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*sparengine.ComponentsApi* | [**getSPARComponents**](docs/ComponentsApi.md#getSPARComponents) | **GET** /analytics/lookups/v2/engines/spar/components | Get SPAR components
*sparengine.DocumentsApi* | [**getSPAR3Documents**](docs/DocumentsApi.md#getSPAR3Documents) | **GET** /analytics/lookups/v2/engines/spar/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*sparengine.FrequenciesApi* | [**getSPARFrequencies**](docs/FrequenciesApi.md#getSPARFrequencies) | **GET** /analytics/lookups/v2/engines/spar/frequencies | Get SPAR frequencies
*sparengine.SPARBenchmarkApi* | [**getSPARBenchmarkById**](docs/SPARBenchmarkApi.md#getSPARBenchmarkById) | **GET** /analytics/lookups/v2/engines/spar/benchmarks | Get SPAR benchmark details


## Documentation for Models

 - [sparengine.AccountDirectories](docs/AccountDirectories.md)
 - [sparengine.Calculation](docs/Calculation.md)
 - [sparengine.CalculationStatus](docs/CalculationStatus.md)
 - [sparengine.CalculationStatusSummary](docs/CalculationStatusSummary.md)
 - [sparengine.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [sparengine.ComponentSummary](docs/ComponentSummary.md)
 - [sparengine.DocumentDirectories](docs/DocumentDirectories.md)
 - [sparengine.Frequency](docs/Frequency.md)
 - [sparengine.PACalculationColumn](docs/PACalculationColumn.md)
 - [sparengine.PACalculationGroup](docs/PACalculationGroup.md)
 - [sparengine.PACalculationParameters](docs/PACalculationParameters.md)
 - [sparengine.PADateParameters](docs/PADateParameters.md)
 - [sparengine.PAIdentifier](docs/PAIdentifier.md)
 - [sparengine.PubCalculationParameters](docs/PubCalculationParameters.md)
 - [sparengine.PubDateParameters](docs/PubDateParameters.md)
 - [sparengine.PubIdentifier](docs/PubIdentifier.md)
 - [sparengine.SPARBenchmark](docs/SPARBenchmark.md)
 - [sparengine.SPARCalculationParameters](docs/SPARCalculationParameters.md)
 - [sparengine.SPARDateParameters](docs/SPARDateParameters.md)
 - [sparengine.SPARIdentifier](docs/SPARIdentifier.md)
 - [sparengine.VaultCalculationParameters](docs/VaultCalculationParameters.md)
 - [sparengine.VaultDateParameters](docs/VaultDateParameters.md)
 - [sparengine.VaultIdentifier](docs/VaultIdentifier.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
