code/typescript/SPAREngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Style Performance and Risk Analysis (SPAR) Engine client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.16.2-blue)](https://developer.factset.com/api-catalog/spar-engine-api)
[![npm](https://img.shields.io/badge/npm-v3.2.1-orange)](https://www.npmjs.com/package/@factset/sdk-sparengine/v/3.2.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.2
- SDK version: 3.2.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-sparengine@3.2.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-sparengine@3.2.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-sparengine');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = Client:; // String | The directory to get the accounts and sub-directories.

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-sparengine');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*sparengine.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*sparengine.AccountsApi* | [**getSPARReturnsType**](docs/AccountsApi.md#getSPARReturnsType) | **GET** /analytics/engines/spar/v3/accounts/{accountPath}/returns-type | Get SPAR account returns type details
*sparengine.BenchmarksApi* | [**getSPARBenchmarkById**](docs/BenchmarksApi.md#getSPARBenchmarkById) | **GET** /analytics/engines/spar/v3/benchmarks | Get SPAR benchmark details
*sparengine.ComponentsApi* | [**getSPARComponentById**](docs/ComponentsApi.md#getSPARComponentById) | **GET** /analytics/engines/spar/v3/components/{id} | Get SPAR component by id
*sparengine.ComponentsApi* | [**getSPARComponents**](docs/ComponentsApi.md#getSPARComponents) | **GET** /analytics/engines/spar/v3/components | Get SPAR components
*sparengine.CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*sparengine.DocumentsApi* | [**getSPAR3Documents**](docs/DocumentsApi.md#getSPAR3Documents) | **GET** /analytics/engines/spar/v3/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*sparengine.FrequenciesApi* | [**getSPARFrequencies**](docs/FrequenciesApi.md#getSPARFrequencies) | **GET** /analytics/engines/spar/v3/frequencies | Get SPAR frequencies
*sparengine.SPARCalculationsApi* | [**cancelCalculationById**](docs/SPARCalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/spar/v3/calculations/{id} | Cancel SPAR calculation
*sparengine.SPARCalculationsApi* | [**getAllCalculations**](docs/SPARCalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/spar/v3/calculations | Get all calculations
*sparengine.SPARCalculationsApi* | [**getCalculationParameters**](docs/SPARCalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/spar/v3/calculations/{id} | Get SPAR calculation parameters by id
*sparengine.SPARCalculationsApi* | [**getCalculationStatusById**](docs/SPARCalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/spar/v3/calculations/{id}/status | Get SPAR calculation status by id
*sparengine.SPARCalculationsApi* | [**getCalculationUnitResultById**](docs/SPARCalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/spar/v3/calculations/{id}/units/{unitId}/result | Get SPAR calculation result by id
*sparengine.SPARCalculationsApi* | [**postAndCalculate**](docs/SPARCalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/spar/v3/calculations | Create and Run SPAR calculation
*sparengine.SPARCalculationsApi* | [**putAndCalculate**](docs/SPARCalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/spar/v3/calculations/{id} | Create or Update SPAR calculation and run it.
*sparengine.SPARPeerUniverseApi* | [**getListOfPeerUniverse**](docs/SPARPeerUniverseApi.md#getListOfPeerUniverse) | **GET** /analytics/engines/spar/v3/peer-universe | Get List of Peer Universe


## Documentation for Models

 - [sparengine.AccountDirectories](docs/AccountDirectories.md)
 - [sparengine.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [sparengine.CalculationMeta](docs/CalculationMeta.md)
 - [sparengine.CalculationStatus](docs/CalculationStatus.md)
 - [sparengine.CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [sparengine.CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [sparengine.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [sparengine.CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [sparengine.CalculationsSummary](docs/CalculationsSummary.md)
 - [sparengine.CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [sparengine.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [sparengine.ComponentSummary](docs/ComponentSummary.md)
 - [sparengine.ComponentSummaryRoot](docs/ComponentSummaryRoot.md)
 - [sparengine.Currency](docs/Currency.md)
 - [sparengine.CurrencyRoot](docs/CurrencyRoot.md)
 - [sparengine.DocumentDirectories](docs/DocumentDirectories.md)
 - [sparengine.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [sparengine.Error](docs/Error.md)
 - [sparengine.ErrorSource](docs/ErrorSource.md)
 - [sparengine.Frequency](docs/Frequency.md)
 - [sparengine.FrequencyRoot](docs/FrequencyRoot.md)
 - [sparengine.ObjectRoot](docs/ObjectRoot.md)
 - [sparengine.PaginationInfo](docs/PaginationInfo.md)
 - [sparengine.PaginationMeta](docs/PaginationMeta.md)
 - [sparengine.ReturnType](docs/ReturnType.md)
 - [sparengine.SPARAccounts](docs/SPARAccounts.md)
 - [sparengine.SPARAccountsRoot](docs/SPARAccountsRoot.md)
 - [sparengine.SPARBenchmark](docs/SPARBenchmark.md)
 - [sparengine.SPARBenchmarkRoot](docs/SPARBenchmarkRoot.md)
 - [sparengine.SPARCalculationParameters](docs/SPARCalculationParameters.md)
 - [sparengine.SPARCalculationParametersRoot](docs/SPARCalculationParametersRoot.md)
 - [sparengine.SPARComponent](docs/SPARComponent.md)
 - [sparengine.SPARComponentIdentifier](docs/SPARComponentIdentifier.md)
 - [sparengine.SPARComponentRoot](docs/SPARComponentRoot.md)
 - [sparengine.SPARDateParameters](docs/SPARDateParameters.md)
 - [sparengine.SPARIdentifier](docs/SPARIdentifier.md)
 - [sparengine.SPARPeerUniverseListResponse](docs/SPARPeerUniverseListResponse.md)
 - [sparengine.SPARPeerUniverseResponseItem](docs/SPARPeerUniverseResponseItem.md)
 - [sparengine.SPARPeerUniverseRoot](docs/SPARPeerUniverseRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
